--- a/ansible/templates/spa.conf.j2
+++ b/ansible/templates/spa.conf.j2
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name dev.classpick.click;
+    server_name dev.classpick.click test.classpick.click prod.classpick.click;
 
     root /usr/share/nginx/html;
     index index.html;
