--- a/ansible/templates/prometheus_status.conf.j2
+++ b/ansible/templates/prometheus_status.conf.j2
@@ -1,5 +1,10 @@
-location /nginx_status {
-    stub_status;
-    allow 127.0.0.1;
-    deny all;
+server {
+    listen 80;
+    server_name 127.0.0.1;
+
+    location /nginx_status {
+        stub_status;
+        allow 127.0.0.1;
+        deny all;
+    }
 }
