--- a/ansible/templates/spa.conf.j2
+++ b/ansible/templates/spa.conf.j2
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name {{ server_name }};
-    
+
     root /usr/share/nginx/html;
     index index.html;
 
@@ -14,5 +14,12 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    # 👇 Prometheus용 stub_status
+    location /nginx_status {
+        stub_status;
+        allow 127.0.0.1;
+        deny all;
     }
 }
