--- a/ansible/templates/spa.conf.j2
+++ b/ansible/templates/spa.conf.j2
@@ -10,7 +10,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://{{ backend_private_ip }}:{{ backend_port }}/api/;
+        proxy_pass http://{{ backend_private_ip }}:{{ backend_port }};
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
